--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
 description = "Collections of icons that is ready to be used with sauron web framework"
+license = "MIT"
+documentation = "https://docs.rs/rings"
+readme = "README.md"
+keywords = ["sauron", "icons", "svg"]
 
 [dependencies]
 sauron = "0.60.5"
