--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,9 @@
-[package]
-name = "rings"
-version = "0.1.0"
-edition = "2021"
-authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
-description = "Collections of icons that is ready to be used with sauron web framework"
-license = "MIT"
-documentation = "https://docs.rs/rings"
-readme = "README.md"
-keywords = ["sauron", "icons", "svg"]
+[workspace]
+members = [
+    "rings",
+    "xtask",
+]
 
-[dependencies]
+[workspace.dependencies]
 sauron = "0.60.5"
+log = "0.4"
