--- a/rings/Cargo.toml
+++ b/rings/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
 description = "Collections of icons that is ready to be used with sauron web framework"
 license = "MIT"
 documentation = "https://docs.rs/rings"
-readme = "README.md"
+readme = "../README.md"
 keywords = ["sauron", "icons", "svg"]
 
 [dependencies]
